# LawyerWebsite

./: README.md  main.py  pyproject.toml
models/: services.py
static/css/: custom.css
static/js/: vanilla-jsuparallax.js
templates/: base.html
templates/pages/: about.html  contact.html  home.html  services.html
templates/partials/: contact_bar.html  contact_response.html  cta.html  footer.html  header.html  hero.html  service_card.html  service_content.html
